--- a/2023-10-28/src/style.css
+++ b/2023-10-28/src/style.css
@@ -43,9 +43,15 @@ iframe {
 /* ---- */
 
 @keyframes scale {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.1); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .animate-scale {
