--- a/2022-01-26/src/styles.css
+++ b/2022-01-26/src/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-gradient: 255,255,255;
+  --bg-gradient: 255, 255, 255;
 }
 
 .slidev-layout.default {
@@ -8,7 +8,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg-gradient: 20,20,20 !important;
+    --bg-gradient: 20, 20, 20 !important;
   }
 }
 
@@ -42,15 +42,30 @@ ul .slidev-vclick-prior {
   inset: 0;
   position: absolute;
   z-index: -1;
-  background-image: url("/bg.png");
+  background-image: url('/bg.png');
   background-repeat: repeat;
   background-size: 60%;
 }
 
 .slidev-page-1 {
-  background:
-    radial-gradient(ellipse, rgba(var(--bg-gradient),0.9) 40%, rgba(var(--bg-gradient),0.4) 120%),
-    radial-gradient(ellipse at top, rgba(var(--bg-gradient),0.8) 20%, rgba(var(--bg-gradient),0) 100%),
-    radial-gradient(ellipse at left, rgba(var(--bg-gradient),0.5) 20%, rgba(var(--bg-gradient),0) 100%),
-    radial-gradient(ellipse at right, rgba(var(--bg-gradient),0.6) 20%, rgba(var(--bg-gradient),0) 100%);
+  background: radial-gradient(
+      ellipse,
+      rgba(var(--bg-gradient), 0.9) 40%,
+      rgba(var(--bg-gradient), 0.4) 120%
+    ),
+    radial-gradient(
+      ellipse at top,
+      rgba(var(--bg-gradient), 0.8) 20%,
+      rgba(var(--bg-gradient), 0) 100%
+    ),
+    radial-gradient(
+      ellipse at left,
+      rgba(var(--bg-gradient), 0.5) 20%,
+      rgba(var(--bg-gradient), 0) 100%
+    ),
+    radial-gradient(
+      ellipse at right,
+      rgba(var(--bg-gradient), 0.6) 20%,
+      rgba(var(--bg-gradient), 0) 100%
+    );
 }
