--- a/2023-10-05/src/style.css
+++ b/2023-10-05/src/style.css
@@ -1,8 +1,3 @@
-/* .slidev-code {
-  font-size: 1em !important;
-  line-height: 1.4em !important;
-} */
-
 html.dark {
   --prism-background: #3335;
 }
@@ -43,9 +38,15 @@ iframe {
 /* ---- */
 
 @keyframes scale {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.1); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .animate-scale {
