--- a/2024-07-06/src/style.css
+++ b/2024-07-06/src/style.css
@@ -19,7 +19,10 @@ h6 {
 
 /* Transitions */
 .slidev-vclick-target {
-  transition: opacity 500ms ease, filter 200ms ease, color 300ms ease;
+  transition:
+    opacity 500ms ease,
+    filter 200ms ease,
+    color 300ms ease;
 }
 
 .slidev-vclick-hidden {
@@ -29,11 +32,15 @@ h6 {
 }
 
 .fade-out-leave-active {
-  transition: opacity calc(var(--slidev-transition-duration) * 0.6) ease-out, filter 200ms ease;
+  transition:
+    opacity calc(var(--slidev-transition-duration) * 0.6) ease-out,
+    filter 200ms ease;
 }
 
 .fade-out-enter-active {
-  transition: opacity calc(var(--slidev-transition-duration) * 0.8) ease-in, filter 200ms ease;
+  transition:
+    opacity calc(var(--slidev-transition-duration) * 0.8) ease-in,
+    filter 200ms ease;
   transition-delay: calc(var(--slidev-transition-duration) * 0.6);
 }
 
@@ -119,7 +126,6 @@ iframe {
   stroke-width: calc(2px * var(--slidev-slide-scale));
 }
 
-
 /* Magic Links */
 .markdown-magic-link {
   display: inline-flex;
@@ -127,7 +133,8 @@ iframe {
   transform: translateY(6px);
   line-height: 100%;
   color: #fffc;
-  --uno: gap-1 transition rounded px1 py1 mx--0.5 important-border-0 font-condensed;
+  --uno: gap-1 transition rounded px1 py1 mx--0.5 important-border-0
+    font-condensed;
 }
 
 .markdown-magic-link:hover {
