--- a/2024-06-08/src/style.css
+++ b/2024-06-08/src/style.css
@@ -88,8 +88,7 @@ h6 {
   transform: translateY(5px);
   line-height: 100%;
   color: #000b;
-  --uno: gap-1 transition rounded px1 py1 mx--0.5 important-border-0
-    font-condensed;
+  --uno: gap-1 transition rounded px1 py1 mx--0.5 important-border-0 font-condensed;
 }
 
 .dark .markdown-magic-link {
