--- a/2024-07-10/src/style.css
+++ b/2024-07-10/src/style.css
@@ -133,8 +133,7 @@ iframe {
   transform: translateY(6px);
   line-height: 100%;
   color: #fffc;
-  --uno: gap-1 transition rounded px1 py1 mx--0.5 important-border-0
-    font-condensed;
+  --uno: gap-1 transition rounded px1 py1 mx--0.5 important-border-0 font-condensed;
 }
 
 .markdown-magic-link:hover {
