--- a/2024-11-12/src/style.css
+++ b/2024-11-12/src/style.css
@@ -14,7 +14,7 @@ h6 {
 }
 
 .dark #slide-content {
-  background-color: black !important;
+  background-color: #050620 !important;
 }
 
 /* Transitions */
